manifests/apps/media/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: media-manager
    component: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: media-manager
      component: radarr
  template:
    metadata:
      labels:
        app: media-manager
        component: radarr
    spec:
      hostname: radarr
      containers:
      - image: linuxserver/radarr:6.4.4
        name: radarr
        ports:
        - containerPort: 7878
          name: webui
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 256Mi
          limits:
            cpu: 250m
            memory: 512Mi
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /data
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - peggy
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-pvc
      - name: data
        nfs:
          server: 10.0.0.13
          path: /mnt/data/library
          readOnly: false
      restartPolicy: Always
